<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/darkpurple"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/img_detail_movie_poster"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/poster" />

        <RelativeLayout
            android:id="@+id/container_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:layout_toEndOf="@+id/img_detail_movie_poster">

            <TextView
                android:id="@+id/tv_detail_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FontDetailBold"/>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detail_movie_title">

                <TextView
                    android:id="@+id/tv_detail_movie_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FontMovie.Larger"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FontMovie.Larger"
                    android:text="@string/line"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/tv_detail_movie_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/FontMovie.Larger"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_info"
            android:layout_toEndOf="@+id/img_detail_movie_poster"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/tb_fav"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/favorite_toggle"
                android:layout_gravity="center"
                android:textOff=""
                android:textOn=""/>

            <Button
                android:id="@+id/btn_detail_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailer"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"
                android:layout_gravity="bottom"/>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontDetailBold"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/tv_detail_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontMovie.Larger"/>
    </LinearLayout>

</LinearLayout>