<resources>
    <string name="app_name">Lumière</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="poster">Poster</string>
    <string name="title_activity_detail_movie">DetailMovieActivity</string>

    <string name="value_episode">%s eps</string>
    <string name="trailer">Trailer</string>
    <string name="trailer_message">There is no trailer that we can show</string>
    <string name="description">Description:</string>
    <string name="line">|</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tv_show">DetailTvShowActivity</string>
    <string name="detail_tvshow">Detail TV Show</string>
    <string name="favorite">Favorite</string>

    <string name="logo">Logo</string>
    <string name="try_again">Try Again</string>
    <string name="lost_connection">Lost Connection</string>
    <string name="empty">empty</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
</resources>